--- a/src/main/resources/templates/contactos/editar.html
+++ b/src/main/resources/templates/contactos/editar.html
@@ -8,7 +8,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">JAMD Agenda</a>
+            <a class="navbar-brand" href="/">Gestor de Citas</a>
             <div class="navbar-nav">
                 <a class="nav-link" href="/citas">Citas</a>
                 <a class="nav-link" href="/contactos">Contactos</a>
@@ -32,39 +32,44 @@
             <div class="card-body">
                 <form th:action="@{/contactos/editar/} + ${contacto.id}" method="post">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre *</label>
                                 <input type="text" class="form-control" id="nombre" name="nombre" 
-                                       th:value="${contacto.nombre}" required maxlength="50">
+                                       th:value="${contacto.nombre}" required>
                             </div>
-                            
+                        </div>
+                        <div class="col-md-4">
                             <div class="mb-3">
                                 <label for="apellido" class="form-label">Apellido</label>
                                 <input type="text" class="form-control" id="apellido" name="apellido" 
-                                       th:value="${contacto.apellido}" maxlength="50">
+                                       th:value="${contacto.apellido}">
                             </div>
                         </div>
-                        
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <div class="mb-3">
                                 <label for="empresa" class="form-label">Empresa</label>
                                 <input type="text" class="form-control" id="empresa" name="empresa" 
-                                       th:value="${contacto.empresa}" maxlength="50">
+                                       th:value="${contacto.empresa}">
                             </div>
-                            
+                        </div>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="telefono" class="form-label">Teléfono *</label>
                                 <input type="tel" class="form-control" id="telefono" name="telefono" 
                                        th:value="${contacto.telefono}" required>
                             </div>
                         </div>
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="correo" class="form-label">Correo *</label>
-                        <input type="email" class="form-control" id="correo" name="correo" 
-                               th:value="${contacto.correo}" required maxlength="100">
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="correo" class="form-label">Correo *</label>
+                                <input type="email" class="form-control" id="correo" name="correo" 
+                                       th:value="${contacto.correo}" required>
+                            </div>
+                        </div>
                     </div>
                     
                     <button type="submit" class="btn btn-primary">Actualizar Contacto</button>
